--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
-        jcenter()
+        google()
         mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:7.1.3'
     }
+}
+
+plugins {
+    id 'maven-publish'
 }
 
 allprojects {
     repositories {
-        jcenter()
+        google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
 
